Updates to loading search Page results

--- a/source/Spatch/public/searchPage.html
+++ b/source/Spatch/public/searchPage.html
@@ -29,7 +29,7 @@
 
         <div class="SearchBar">
             <input  id="searchInput" placeholder="Search for a Recipe" />
-            <button id="filterToggle"  onclick="toggleFilter()">
+            <button id="filterToggle" >
                 <img id="filterImage" src="frontEnd1-assets/search-page-icons/filter.png"></img>
             </button>
         </div>
@@ -95,5 +95,6 @@
     <script id="replace_with_navbar" src="../scripts/nav.js"></script>
     <!-- Our Personal JS Files -->
     <script src='../scripts/search.js'></script>
+    <script src="../scripts/resultCard.js"></script>
 </body>
 </html>
