--- a/source/Spatch/index.html
+++ b/source/Spatch/index.html
@@ -7,7 +7,7 @@
         <title>Recipe | Spatch</title>
     
         <!-- Favicon -->
-        <link rel='icon' type='image/png' href='/favicon.png'>
+        <link rel='icon' type='image/png' href='public/favicon.png'>
     
         <!-- Bootstrap (goes before our CSS Files) -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
