--- a/source/Spatch/public/home.html
+++ b/source/Spatch/public/home.html
@@ -30,6 +30,7 @@
                     <h1>Let's get cooking!</h1>
                 </div>
                 <div class="col create-new-recipe-top">
+                    <a role="button" class="btn btn-primary" id='newCookbook' href="cookbookDisplay.html">Create new cookbook</a>
                     <a role="button" class="btn btn-primary" href="addRecipe.html">Create new recipe</a>
                 </div>
             </div>
