--- a/source/Spatch/public/resultDisplay.html
+++ b/source/Spatch/public/resultDisplay.html
@@ -28,7 +28,7 @@
         <div id="nav-placeholder"></div>
         
         <div class="main-content" >
-            <a id="back-button" href="home.html"><img src="./Assets-images/arrowLeft.svg" name="goBack" class="goBack" id="goBack"></a>
+            <a id="back-button" href=""><img src="./Assets-images/arrowLeft.svg" name="goBack" class="goBack" id="goBack"></a>
             <div class="row justify-content-start">
                 <div class="col-8" >
                     <div class="row" id="recipe-title-items">
@@ -92,8 +92,8 @@
         </div>
     </div>
     <!-- JS files -->
-    <script src="../scripts/recipeDisplay.js"></script>
-    <script src ="../scripts/recipeDisplayComponent.js"></script>
+    <script src="../scripts/resultDisplay.js"></script>
+    <script src ="../scripts/resultDisplayComponent.js"></script>
     <script src="../scripts/TTSComponent.js"></script>
     <script src="../scripts/timerComponent.js"></script>
     
