--- a/source/Spatch/public/searchPage.html
+++ b/source/Spatch/public/searchPage.html
@@ -96,5 +96,7 @@
     <!-- Our Personal JS Files -->
     <script src='../scripts/search.js'></script>
     <script src="../scripts/resultCard.js"></script>
+    <script src="../scripts/resultDisplayComponent.js"></script>
+    <script src="../scripts/resultDisplay.js"></script>
 </body>
 </html>
