removed edit recipe button for search stuff

--- a/source/Spatch/public/resultDisplay.html
+++ b/source/Spatch/public/resultDisplay.html
@@ -74,7 +74,7 @@
 
                         <!-- <dt class="col">Tags</dt>
                         <img src="./Assets-images/tag.svg" alt=""> -->
-                        <dt class="col"><button type="button" class="btn btn-primary" id="edit-recipe-button">Edit Recipe</button></dt>
+                        <!-- <dt class="col"><button type="button" class="btn btn-primary" id="edit-recipe-button">Edit Recipe</button></dt> -->
                     </dl>
                 </div>
             </div>
