--- a/source/Spatch/public/editRecipe.html
+++ b/source/Spatch/public/editRecipe.html
@@ -38,7 +38,10 @@
             <div class="subTitle">Image</div>
             <p id="currImage">No Current image</p>
             <!-- <div id="placeholder">upload an image</div> -->
-            <button type="button" class="btn btn-secondary">Upload new image</button>
+            <div class="form-group">
+                  <!-- <label for="exampleFormControlFile1">Example file input</label> -->
+                  <input type="file" class="form-control-file btn btn-secondary" id="recipeImage">
+            </div>
         </div>
         <!--Try to have suggestions by javascript while entering-->
         <!--Consider a drop down bar instead-->
