added to landing page

--- a/source/Spatch/index.html
+++ b/source/Spatch/index.html
@@ -117,7 +117,9 @@
         <section nav1 callToActionPage>
             <h1 class="actionTitle">Is This The Recipe Book For You?</h1>
             <h1 class="actionTitle2">Only One Way To Find Out!</h1>
-            <a href="home.html" class="actionBtn">Click Here</a>
+            <div class="alignActionBtn">
+                <a href="home.html" class="actionBtn">Click Here</a>
+            </div>
         </section>
     </body>
 </html>
