made home, recipes, and explore clickable

--- a/source/Spatch/index.html
+++ b/source/Spatch/index.html
@@ -20,9 +20,9 @@
             <header>
                 <img src = "public/Assets-images/logo.png" class = "logo">
                 <ul>
-                    <li><a href="public/home.html" class ="navItems">Home</a></li>
-                    <li><a href="public/home.html" class ="navItems">Recipes</a></li>
-                    <li><a href="public/searchPage.html" class ="navItems">Explore</a></li>   
+                    <li><a href="https://fervent-goldberg-7618a0.netlify.app/public/home">Home</a></li>
+                    <li><a href="https://fervent-goldberg-7618a0.netlify.app/public/home">Recipes</a></li>
+                    <li><a href="https://fervent-goldberg-7618a0.netlify.app/public/searchPage.html">Explore</a></li>   
                     <!-- <li><a href="#" class = "navItems">About us</a></li> -->
                 </ul>
             </header>
