small css changes

--- a/source/Spatch/public/editRecipe.html
+++ b/source/Spatch/public/editRecipe.html
@@ -51,7 +51,7 @@
         </div>
         <span id="totalTime">
             <span class="subTitle">Total Time</span>
-            <input type="text" class="create-recipe-input-fields" id="totalTimeEntry" name="totalTimeEntry" placeholder="i.e. XX hrs XX minutes">
+            <input type="text" class="create-recipe-input-fields" id="totalTimeEntry" name="totalTimeEntry" placeholder="The total time in minutes">
         </span>
         <span id="servingSize">
             <span class="subTitle">Serving Size</span>
