--- a/source/Spatch/public/home.html
+++ b/source/Spatch/public/home.html
@@ -52,12 +52,12 @@
                     <div id="all-cookbooks" class="col recipe-display"></div>
                 </div>
             </div>
-            <div class="recipe-row">
+            <!-- <div class="recipe-row">
                 <h2>Discover Recipes</h2>
                 <div class="row recipe-list">
                     <div id="discover-recipes-cards" class="col recipe-display"></div>
                 </div>
-            </div>
+            </div> -->
             <!--
             <div class="recipe-row">
                 <h4>All Recipes</h4>
