--- a/source/Spatch/public/searchPage.html
+++ b/source/Spatch/public/searchPage.html
@@ -29,9 +29,9 @@
 
         <div class="SearchBar">
             <input  id="searchInput" placeholder="Search for a Recipe" />
-            <button id="filterToggle" >
+            <!-- <button id="filterToggle" >
                 <img id="filterImage" src="frontEnd1-assets/search-page-icons/filter.png"></img>
-            </button>
+            </button> -->
         </div>
 
 
