--- a/source/Spatch/public/cookbookDisplay.html
+++ b/source/Spatch/public/cookbookDisplay.html
@@ -4,7 +4,7 @@
 <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width,initial-scale=1'>
 
-    <title>Title</title>
+    <title>Cookbook | Spatch</title>
 
     <!-- Favicon -->
     <link rel='icon' type='image/png' href='favicon.png'>
