--- a/source/Spatch/public/searchPage.html
+++ b/source/Spatch/public/searchPage.html
@@ -97,6 +97,6 @@
     <script src='../scripts/search.js'></script>
     <script src="../scripts/resultCard.js"></script>
     <!-- <script src="../scripts/resultDisplayComponent.js"></script>
-    <script src="../scripts/resultDisplay.js"></script>
-</body> -->
+    <script src="../scripts/resultDisplay.js"></script> -->
+</body>
 </html>
