small changes to index

--- a/source/Spatch/index.html
+++ b/source/Spatch/index.html
@@ -33,7 +33,7 @@
                     <p> Welcome to the amazing Team Ate Teen Recipe Page. It is our mission to provide to you the easiest and most accessible means of 
                         creating and looking up any number of recipes to your liking. Don't be shy, remember what the great Auguste Gusteau said <b>"Anyone can cook"!</b>
                     </p>
-                    <a href="public/searchPage.html" class="recipeBtn">Find Recipes</a>
+                    <a href="public/home.html" class="recipeBtn">Find Recipes</a>
                 </div>
                 <div class = "recipeBookDiv">
                     <img src ="public/Assets-images/GusteauImg.png" class="chefImg">
@@ -114,10 +114,10 @@
             </div>
         </section>
 
-        <section nav1 callToActionPage>
+        <section nav1 callToActionPage class="bottom-section">
             <h1 class="actionTitle">Is This The Recipe Book For You?</h1>
             <h1 class="actionTitle2">Only One Way To Find Out!</h1>
-            <a href="public/home.html" class="actionBtn">Click Here</a>
+            <a href="public/home.html" class="actionBtn actionTitle2">Click Here</a>
         </section>
     </body>
 </html>
