--- a/source/Spatch/index.html
+++ b/source/Spatch/index.html
@@ -26,8 +26,8 @@
                     <!-- <li><a href="#" class = "navItems">About us</a></li> -->
                 </ul>
             </header>
-            <div class = "features">
-                <div class = "description">
+            <div class = "features row">
+                <div class = "description col-sm">
                     <h3>LETS GET <br><span>COOKING</span>
                     </h3>
                     <p> Welcome to the amazing Team Ate Teen Recipe Page. It is our mission to provide to you the easiest and most accessible means of 
@@ -35,7 +35,7 @@
                     </p>
                     <a href="public/home.html" class="recipeBtn">Find Recipes</a>
                 </div>
-                <div class = "recipeBookDiv">
+                <div class = "recipeBookDiv col-sm">
                     <img src ="public/Assets-images/GusteauImg.png" class="chefImg">
                 </div>
             </div>
