updated landing page

--- a/source/Spatch/index.html
+++ b/source/Spatch/index.html
@@ -73,14 +73,14 @@
             </div>
         </section>
 
-        <section class="nav1 overallDescriptions">
-            <div class="overview">
+        <section class="nav1 overallDescriptions row">
+            <div class="overview col">
                 <h1 class="featureTitle">Features</h1>
                 <div class="fewFeatures row">
                     <div class="detailFeature col-sm">
-                        <div class="overviewImg">
+                        <!-- <div class="overviewImg"> -->
                             <img src="public/Assets-images/exploreLogo.png" class="logoImg">
-                        </div>
+                        <!-- </div> -->
                         <h2>Explore</h2>
                         <p> Tired of cooking and eating the same food everyday? Having trouble thinking about that anniversary dinner surprise? 
                             With the explroation feature, we can help solve all your problems. This feature gives you the capabilities of exploring recipes that we have stored 
