changed create recipe redirect

--- a/source/Spatch/index.html
+++ b/source/Spatch/index.html
@@ -51,7 +51,7 @@
                         the create my own recipe feature in our application. If you want to learn more about this feature please keep scrolling down. Or you can click
                         the <b>Create Recipe</b> button and be on your way.
                     </p>
-                    <a href="public/home.html" class="recipeBtn section2Btn">Create Recipe</a>
+                    <a href="public/addrecipe.html" class="recipeBtn section2Btn">Create Recipe</a>
                 </div>
             </div>
         </section>
