--- a/source/Spatch/public/home.html
+++ b/source/Spatch/public/home.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="col create-new-recipe-top">
                     <a role="button" class="btn btn-primary top-btn" id='newCookbook' href="cookbookDisplay.html">Create new cookbook</a>
-                    <a role="button" class="btn btn-primary top-btn" href="addRecipe.html">Create new recipe</a>
+                    <a role="button" class="btn btn-primary top-btn" id ='newRecipe' href="addRecipe.html">Create new recipe</a>
                 </div>
             </div>
             <div class="recipe-row">
